# steamos-reset

./: .gitignore  Makefile.am  README.md  boot-status  cef.mk  clear  configure.ac  debug  factory-reset  holo-reset-tool.in  holo-reset.in  holo-reset.sh.in  os-status  qml.mk  srvctl.c  status  steamos-reset-tool.in  steamos-reset.in  steamos-reset.sh.in  undo-reset  wrapper.c
cef/: CMakeLists.txt
cef/cmake/: FindCEF.cmake
cef/src/: app.cc  app.h  custom_scheme.cc  custom_scheme.h  handler.cc  handler.h  main.cc
cef/web/: backend.js  index.html  main.js  style.css
data/: holo-factory-reset.desktop  steamos-factory-reset.desktop
lighttpd/: holo-reset.conf.in  holo-reset.service  steamos-reset.service
qml/: holo-reset.cpp  holo-reset.pro  holo-reset.qml  steamos-reset.cpp  steamos-reset.pro  steamos-reset.qml
qml/js/: backend.js  reset.js
